--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	<button style="width: 274px;" onclick="window.location.href='student_login.php';">Login as Student</button><br>  
 	<button style="width: 135px;" onclick="window.location.href='admin_login.php';">Login as Admin</button>
 	<button style="width: 135px;" onclick="window.location.href='teacher_login.php';">Login as Teacher</button><br> 
-	</p>
+	</p>	
+	<p><small>"Please enable javascript for greater experience"</small></p>
 </div>
 	
 </body>
